--- a/pages/games/sequence.html
+++ b/pages/games/sequence.html
@@ -17,7 +17,7 @@
     <style>
         /* Sequence Game Styles */
         .sequence-container {
-            padding: 2rem 0 4rem;
+            padding: calc(80px + 2rem) 0 4rem;
             min-height: calc(100vh - 80px);
         }
 
@@ -871,23 +871,6 @@
         </div>
     </nav>
 
-    <!-- Page Header -->
-    <section class="page-header">
-        <div class="container">
-            <div class="page-header-content">
-                <nav class="breadcrumb">
-                    <a href="../../index.html">Home</a>
-                    <span>/</span>
-                    <a href="../../index.html#games">Games</a>
-                    <span>/</span>
-                    <span>Sequence</span>
-                </nav>
-                <h1>Mudra Sequence</h1>
-                <p>Arrange mudras in the correct traditional order</p>
-            </div>
-        </div>
-    </section>
-
     <!-- Sequence Container -->
     <section class="sequence-container">
         <div class="container">
@@ -1078,11 +1061,19 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-bottom" style="border-top: none; padding-top: 0;">
-                <p>2025 Mudra Academy. All rights reserved.</p>
+            <div class="footer-simple">
+                <a href="../../index.html" class="footer-logo">
+                    <span>Mudra Academy</span>
+                </a>
+                <nav class="footer-nav">
+                    <a href="../../index.html">Home</a>
+                    <a href="../library.html">Library</a>
+                    <a href="../detection-mode.html">Detection</a>
+                    <a href="../../index.html#games">Games</a>
+                </nav>
+                <p class="footer-copy">&copy; 2025 Mudra Academy. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -1460,6 +1451,11 @@
             } else {
                 nextBtn.innerHTML = '<span>Next Round</span><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="5" y1="12" x2="19" y2="12"/><polyline points="12 5 19 12 12 19"/></svg>';
             }
+            
+            // Auto-scroll to show feedback section
+            setTimeout(() => {
+                feedbackSection.scrollIntoView({ behavior: 'smooth', block: 'center' });
+            }, 100);
         }
 
         // Next Round
