--- a/pages/games/sequence.html
+++ b/pages/games/sequence.html
@@ -1151,6 +1151,67 @@
                     { name: "Pataka", image: "Pataka.jpg" }
                 ],
                 explanation: "The final sequence in traditional order, ending with the foundational Pataka mudra."
+            },
+            // Samyukta Hasta (Double-Hand) Sequences
+            {
+                name: "Basic Samyukta Sequence 1",
+                mudras: [
+                    { name: "Anjali", image: "Anjali.jpg" },
+                    { name: "Kapota", image: "Kapota.jpg" },
+                    { name: "Karkata", image: "Karkata.jpg" },
+                    { name: "Svastika", image: "Svastika.jpg" }
+                ],
+                explanation: "The first four Samyukta Hasta mudras - from greeting to auspicious cross."
+            },
+            {
+                name: "Devotional Sequence",
+                mudras: [
+                    { name: "Anjali", image: "Anjali.jpg" },
+                    { name: "Sivalinga", image: "Sivalinga.jpg" },
+                    { name: "Kapota", image: "Kapota.jpg" },
+                    { name: "Puspaputa", image: "Puspaputa.jpg" }
+                ],
+                explanation: "A devotional sequence moving from salutation to Shiva symbol to offering flowers."
+            },
+            {
+                name: "Divine Creatures",
+                mudras: [
+                    { name: "Garuda", image: "Garuda.jpg" },
+                    { name: "Nagabandha", image: "Nagabandha.jpg" },
+                    { name: "Bherunda", image: "Bherunda.jpg" },
+                    { name: "Matsya", image: "Matsya.jpg" }
+                ],
+                explanation: "Sacred creatures in Hindu mythology - Eagle, Serpent, Formidable Bird, and Fish."
+            },
+            {
+                name: "Avatar Animals",
+                mudras: [
+                    { name: "Matsya", image: "Matsya.jpg" },
+                    { name: "Kurma", image: "Kurma.jpg" },
+                    { name: "Varaha", image: "Varaha.jpg" },
+                    { name: "Garuda", image: "Garuda.jpg" }
+                ],
+                explanation: "Vishnu's avatars represented through mudras - Fish, Tortoise, Boar, and his vehicle Garuda."
+            },
+            {
+                name: "Symbolic Objects",
+                mudras: [
+                    { name: "Chakra", image: "Chakra.jpg" },
+                    { name: "Sankha", image: "Sankha.jpg" },
+                    { name: "Pasa", image: "Pasa.jpg" },
+                    { name: "Sakata", image: "Sakata.jpg" }
+                ],
+                explanation: "Sacred objects and symbols - Disc, Conch, Noose, and Cart."
+            },
+            {
+                name: "Bond & Connection",
+                mudras: [
+                    { name: "Kilaka", image: "Kilaka.jpg" },
+                    { name: "Katakavardhana", image: "Katakavardhana.jpg" },
+                    { name: "Kartarisvastika", image: "Kartarisvastika.jpg" },
+                    { name: "Utsanga", image: "Utsanga.jpg" }
+                ],
+                explanation: "Mudras representing bonds, links, and embrace - from finger bonds to full embrace."
             }
         ];
 
